--- a/ets2panda/public/ignoredAllowed.yaml
+++ b/ets2panda/public/ignoredAllowed.yaml
@@ -48,97 +48,62 @@ ignored_list:
       - name: VarBinder
       - name: ETSBinder
 
-    # Method will not be generated if its name starts with any element listed below
-    name_starts_with:
-      - HasFloatingPoint
-      - AddChildLambda
-      - 'operator='
-      - NumericConditionalCheck
-      - CompileComputed
-      - Result
-      - GetConstOriginalBaseType
-      - GetOwnProperty
-      - AddProperty
-      - RemoveProperty
-      - ReduceSubtypes
-      - CheckIdenticalVariable
-      - CreatePropertyMap
-      - AddSpecifiersToTopBindings
-      - CheckForRedeclarationError
-      - CheckExpressionsInConstructor
-      - PerformArithmeticOperationOnTypes
-      - PerformRelationOperationOnTypes
-      - BindingsModuleObjectAddProperty
-      - MakePropertyNonNullish
-      - GetProxyMethodBody
-      - GetFlagsForProxyLambda
-      - ComputeProxyMethods
-      - CheckValidUnionEqual
-      - TestUnionType
-      - IsValidSetterLeftSide
-      - CreateProxyFunc
-      - ApplyModifiersAndRemoveImplementedAbstracts
-      - ValidateAbstractSignature
-      - ValidateNonOverriddenFunction
-      - InvalidateType
-      - TypeError
-
-    # Method will not be generated if return type is one of the following
-    return_type:
-      - name: Checker
-      - name: ETSChecker
-      - name: ArenaAllocator
-      - name: Allocator
-      - name: Program
-      - name: Tag
-      - name: ConstraintCheckRecord
-      - name: Number
-        namespace: lexer
-      - name: Property
-        namespace: AstDumper
-      - name: TSChecker
-        namespace: checker
-      - name: stringstream
-      - name: Holder
-      - name: tuple
-      - name: UnaryPredicate
-        namespace: checker
-      - name: VarBinder
-      - name: ModulesToExportedNamesWithAliases
-        namespace: varbinder
-      - name: T
-      - name: K
-      - name: ModuleEntry
-        namespace: varbinder
-      - name: ETSBinder
-      - name: Context
-        namespace: public_lib
-      - name: VariableType
-        namespace: varbinder
-      - name: Args
-        namespace: varbinder
-      - name: InsertResult
-        namespace: varbinder
-      - name: RelationHolder
-        namespace: checker
-      - name: auto
-      - name: recursive_mutex
-      - name: SmartCastArray
-      - name: SmartCastTypes
-      - name: SemanticAnalyzer
-      - name: optional
-        namespace: std
-      - name: WrapperDesc
-      - name: Language
-      - name: ScopedDebugInfoPlugin
-      - name: Args
-        namespace: parser
-      - name: ETSParser
-      - name: ScriptExtension
-      - name: function
-        namespace: std
-      - name: Result
-        namespace: 'compiler::ast_verifier::'
+  # Method will not be generated if return type is one of the following
+  return_type:
+    - name: Checker
+    - name: ETSChecker
+    - name: ArenaAllocator
+    - name: Allocator
+    - name: Program
+    - name: Tag
+    - name: ConstraintCheckRecord
+    - name: Number
+      namespace: lexer
+    - name: Property
+      namespace: AstDumper
+    - name: TSChecker
+      namespace: checker
+    - name: stringstream
+    - name: Holder
+    - name: tuple
+    - name: UnaryPredicate
+      namespace: checker
+    - name: VarBinder
+    - name: ModulesToExportedNamesWithAliases
+      namespace: varbinder
+    - name: T
+    - name: K
+    - name: ModuleEntry
+      namespace: varbinder
+    - name: ETSBinder
+    - name: Context
+      namespace: public_lib
+    - name: VariableType
+      namespace: varbinder
+    - name: Args
+      namespace: varbinder
+    - name: InsertResult
+      namespace: varbinder
+    - name: RelationHolder
+      namespace: checker
+    - name: auto
+    - name: recursive_mutex
+    - name: SmartCastArray
+    - name: SmartCastTypes
+    - name: SemanticAnalyzer
+    - name: optional
+      namespace: std
+    - name: WrapperDesc
+    - name: Language
+    - name: ScopedDebugInfoPlugin
+    - name: Args
+      namespace: parser
+    - name: ETSParser
+    - name: ScriptExtension
+    - name: function
+      namespace: std
+    - name: Result
+      namespace: 'compiler::ast_verifier::'
 
 
   # Method and constructors will not be generated if c++ postfix contains any element listed below
@@ -223,37 +188,6 @@ ignored_list:
       name: K
   - name: '[N]'
 
-  # TODO(zhelyapovaleksey): refactor template filtering, because template can be named by any name (Issue #21565)
-  # Methods and constructors which contains arguments with templates listed below will not be generated
-  template_types:
-  - name: Checker
-  - name: ETSChecker
-  - name: Program
-  - name: stringstream
-  - name: TSChecker
-    namespace: checker
-  - name: T
-  - name: K
-  - name: ModuleEntry
-    namespace: varbinder
-  - name: Args
-  - name: ETSBinder
-  - name: InsertResult
-    namespace: varbinder
-  - name: pair
-  - name: RelationHolder
-    namespace: checker
-  - name: recursive_mutex
-  - name: tuple
-  - name: SmartCastArray
-  - name: SmartCastTypes
-  - name: ConstraintCheckRecord
-  - name: optional
-    namespace: std
-  - name: ArenaVector
-  - name: WrapperDesc
-  - name: ScopedDebugInfoPlugin
-
   # Methods and constructors which contains templates with names listed below will not be generated
   template_names:
   - name: typename Invariant
@@ -266,3 +200,38 @@ allowed_list:
     - ResolveReferenceForScope
     - ResolveReferencesForScope
     - ResolveReferencesForScopeWithContext
+  template_types:
+  - ETSFunctionType
+  - ETSImportDeclaration
+  - string
+  - ETSObjectType
+  - LocalVariable
+  - Statement
+  - FunctionScope
+  - Type
+  - Program
+  - ClassProperty
+  - Expression
+  - size_t
+  - Decorator
+  - ReturnStatement
+  - TSClassImplements
+  - SwitchCaseStatement
+  - Decl
+  - TSTypeParameter
+  - Variable
+  - bool
+  - VariableDeclarator
+  - AstNode
+  - TemplateElement
+  - Signature
+  - TSInterfaceDeclaration
+  - AnnotationDeclaration
+  - TSInterfaceHeritage
+  - AnnotationUsage
+  - CatchClause
+  - LabelPair
+  - ExportSpecifier
+  - ClassDefinition
+  - StringView
+  - TypeNode
