Separate tuple types from arrays in the checker
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBLDGZ

Internal issue: #22721

Test: build, new runtime test, new checker tests

Change-Id: I3f0f95dfa7afb42966f5f4b7cac5e71af57fad03
Signed-off-by: Martin Sajti <martin.sajti@h-lab.eu>

--- a/ets2panda/public/cppToCTypes.yaml
+++ b/ets2panda/public/cppToCTypes.yaml
@@ -1531,14 +1531,14 @@ change_types:
         namespace: checker
     new_args:
     - type:
-        name: int32_t
+        name: size_t
         ptr_depth: '|es2panda_arg.type.ptr_depth_int|'
       name: '|arg_name|'
     cast:
         expression:
         reverse_cast:
           start : >-
-            reinterpret_cast<?const? int32_t |es2panda_arg.type.ptr_depth|>
+            reinterpret_cast<?const? size_t |es2panda_arg.type.ptr_depth|>
         var_name: '|arg_name|'
 
   - es2panda_arg:
