Normalized lsp test
1. normalized lsp test
2. fixed getspanofenclosingcomment
3. fixed data race
4. fixed getsemanticdiagnostics and getsyntacticdiagnostics

Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBKEX2
Signed-off-by: lijunru <lijunru9@huawei.com>

--- a/ets2panda/test/unit/lsp/CMakeLists.txt
+++ b/ets2panda/test/unit/lsp/CMakeLists.txt
@@ -15,8 +15,5 @@ ets2panda_add_gtest(lsp_api_test CPP_SOURCES
     lsp_api_test.cpp
     classifier_test.cpp
     cancellation_token_test.cpp
-)
-
-ets2panda_add_gtest(lsp_public_api_test
-    CPP_SOURCES lsp_public_api_test.cpp
+    get_span_of_enclosing_comment_test.cpp
 )
