Refactor error class
Description:
* Move Error class out from es2panda.h
* Rename Error class to Diagnostic
* Split Diagnostic class to ThrowableDiagnostic class and diagnostics based on yaml files

Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBKKNS

Signed-off-by: Chernykh Sergey <chernykh.sergey1@huawei.com>

--- a/ets2panda/BUILD.gn
+++ b/ets2panda/BUILD.gn
@@ -463,6 +463,7 @@ libes2panda_sources = [
   "parser/statementTSParser.cpp",
   "util/arktsconfig.cpp",
   "util/bitset.cpp",
+  "util/diagnostic.cpp",
   "util/diagnosticEngine.cpp",
   "util/dtoa_helper.cpp",
   "util/errorRecovery.cpp",
