Stop es2panda after Checker if errors exist
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBKPI0

Tests: Run Test-U-Runner and CI

Signed-off-by: Zelentsov Dmitry <zelentsov.dmitry@huawei-partners.com>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -14,7 +14,7 @@
 syntax:
 - name: MISSING_TYPE_ANNOTATION
   id: 1
-  message: Missing type annotation for property{}.
+  message: Missing type annotation for property '{}'.
 
 - name: IMPROPER_NESTING_CLASS
   id: 2
