Support retention policy for annotations
Issue:https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBL9OA?from=project-issue

Description:Support the use of retention in annotations to provide a retention policy for the annotation.

Signed-off-by: xuxinjie4 <xuxinjie4@huawei.com>

--- a/ets2panda/compiler/scripts/signatures.yaml
+++ b/ets2panda/compiler/scripts/signatures.yaml
@@ -144,6 +144,18 @@ defines:
     ref: PROPERTY
   - name: 'never'
     ref: NEVER_TYPE_NAME
+  - name: 'SOURCE'
+    ref: SOURCE_POLICY
+  - name: 'BYTECODE'
+    ref: BYTECODE_POLICY
+  - name: 'RUNTIME'
+    ref: RUNTIME_POLICY
+  - name: 'std.annotations.'
+    ref: STD_ANNOTATIONS
+  - name: 'std.annotations.Retention'
+    ref: STD_ANNOTATIONS_RETENTION
+  - name: Retention
+    ref: BUILTIN_RETENTION
 
 packages:
   - name: 'std.core'
