Fix a bug with ambient class
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBLGDL?from=project-issue

Description: Fix a bug that ambient class allow to declare class without body

Signed-off-by: xuxinjie4 <xuxinjie4@huawei.com>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -23,3 +23,7 @@ syntax:
 - name: IMPROPER_NESTING_INTERFACE
   id: 3
   message: Property or signature expected.
+
+- name: AMBIENT_CLASS_MISSING_BODY
+  id: 4
+  message: Ambient class declarations must have a body.
