Refactor diagnostic in declgenETS2TS
Description:
1. Replace throw with log error
2. Support diagnostic engine inside declgenETS2TS
3. Move all DeclgenETS2TS's diagnstics into yaml files

Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBLQ2U

Signed-off-by: Sergey Chernykh <chernykh.sergey1@huawei.com>

--- a/ets2panda/BUILD.gn
+++ b/ets2panda/BUILD.gn
@@ -1193,11 +1193,15 @@ ark_gen("es2panda_diagnostic_gen") {
     "util/diagnostic/semantic.yaml",
     "util/diagnostic/warning.yaml",
     "util/diagnostic/fatal.yaml",
+    "declgen_ets2ts/declgen_ets2ts_error.yaml",
+    "declgen_ets2ts/declgen_ets2ts_warning.yaml",
   ]
   template_files = [ "diagnostic.h.erb" ]
   sources = "util/diagnostic"
   destination = "$target_gen_dir/generated"
   api = [
+    "util/diagnostic/diagnostic.rb",
+    "util/diagnostic/diagnostic.rb",
     "util/diagnostic/diagnostic.rb",
     "util/diagnostic/diagnostic.rb",
     "util/diagnostic/diagnostic.rb",
