gupport diagnostic engine in ArkTS config
Description:
  * Replace output diagnostic into std::cerr with diagnostic engine
  * Support new ARKTS_CONFIG_ERROR diagnostic type
  * Describe all diagnsotic messages in arktsconfig_errors.yaml file

Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBMEGH

Signed-off-by: Sergey Chernykh <chernykh.sergey1@huawei.com>

--- a/ets2panda/BUILD.gn
+++ b/ets2panda/BUILD.gn
@@ -1195,11 +1195,13 @@ ark_gen("es2panda_diagnostic_gen") {
     "util/diagnostic/fatal.yaml",
     "declgen_ets2ts/declgen_ets2ts_error.yaml",
     "declgen_ets2ts/declgen_ets2ts_warning.yaml",
+    "util/diagnostic/arktsconfig_error.yaml",
   ]
   template_files = [ "diagnostic.h.erb" ]
   sources = "util/diagnostic"
   destination = "$target_gen_dir/generated"
   api = [
+    "util/diagnostic/diagnostic.rb",
     "util/diagnostic/diagnostic.rb",
     "util/diagnostic/diagnostic.rb",
     "util/diagnostic/diagnostic.rb",
