--- a/ets2panda/util/diagnostic/semantic.yaml
+++ b/ets2panda/util/diagnostic/semantic.yaml
@@ -1109,3 +1109,7 @@ semantic:
 - name: EXPECTED_TYPE_ARGUMENTS
   id: 275
   message: "Expected at least {} type arguments, but got {}."
+
+- name: INTERFACE_INSTANTIATION
+  id: 276
+  message: "{} is an interface therefore cannot be instantiated."
