provide Id->Def method for plugin & lsp api
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBJKF9

Tests:
ninja es2panda-plugin-tests

Signed-off-by: ozerovnikita <ozerov.nikita@huawei-partners.com>

--- a/ets2panda/test/unit/plugin/CMakeLists.txt
+++ b/ets2panda/test/unit/plugin/CMakeLists.txt
@@ -57,6 +57,9 @@ set(PLUGIN_TESTS
     "plugin_proceed_to_state_rerun_scopes_after_lowered compile.sts ${RUNTIME_MODE} cpp ${EXECUTABLE_PLUGIN}"
     "plugin_proceed_to_state_run_verifier compile.sts ${COMPILE_MODE} cpp ${EXECUTABLE_PLUGIN}"
     "plugin_proceed_to_state_ast_node_check compile.sts ${COMPILE_MODE} cpp ${EXECUTABLE_PLUGIN}"
+    "plugin_proceed_to_state_find_method_decl compile.sts ${COMPILE_MODE} cpp ${EXECUTABLE_PLUGIN}"
+    "plugin_proceed_to_state_find_identifier_decl compile.sts ${COMPILE_MODE} cpp ${EXECUTABLE_PLUGIN}"
+    "plugin_proceed_to_state_find_import_ident_decl import.sts ${COMPILE_MODE} cpp ${EXECUTABLE_PLUGIN}"
     "plugin_proceed_to_state_rebind compile.sts ${COMPILE_MODE} cpp ${EXECUTABLE_PLUGIN}"
 )
 
