--- a/ets2panda/test/unit/lsp/CMakeLists.txt
+++ b/ets2panda/test/unit/lsp/CMakeLists.txt
@@ -18,11 +18,14 @@ ets2panda_add_gtest(lsp_api_test_1 CPP_SOURCES
 )
 
 ets2panda_add_gtest(lsp_api_test CPP_SOURCES
-    quick_info_test.cpp
     lsp_api_test.cpp
     cancellation_token_test.cpp
     get_span_of_enclosing_comment_test.cpp
     user_preferences.cpp
+)
+
+ets2panda_add_gtest(lsp_quick_info_api_test CPP_SOURCES
+    quick_info_test.cpp
 )
 
 ets2panda_add_gtest(lsp_api_classifier_test CPP_SOURCES
