Improve typecheck for hasDecl = true
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBT7C0

Change-Id: I1ca89150864dd2b941af0ca879aace2c6a735709
Signed-off-by: Klimentieva <klimentieva.maria@h-partners.com>

--- a/ets2panda/util/diagnostic/semantic.yaml
+++ b/ets2panda/util/diagnostic/semantic.yaml
@@ -1350,3 +1350,7 @@ semantic:
 - name: PROPERTY_MAYBE_MISSING_INIT
   id: 339
   message: "Property '{}' might not have been initialized."
+
+- name: EXTEND_DYNAMIC
+  id: 340
+  message: "Class {} shouldn't extend dynamic class."
