--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -1190,3 +1190,7 @@ syntax:
 - name: PREDEFINED_TYPE_AS_IDENTIFIER
   id: 295
   message: "{} is a predefined type, cannot be used as an identifier"
+
+- name: EXPORT_WITHOUT_DECLARE_IN_DECL_MODULE
+  id: 296
+  message: "Export keyword without declare shouldn't be used in declaration module."
