fix annotations and typed methods
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBLWPC

Tests:
ninja es2panda-plugin-test

Signed-off-by: ozerovnikita <ozerov.nikita@huawei-partners.com>

--- a/ets2panda/public/ignoredAllowed.yaml
+++ b/ets2panda/public/ignoredAllowed.yaml
@@ -21,8 +21,9 @@ ignored_list:
     call_class:
       - name: AstNode
       - name: ClassElement
-      - name: TypedStatement
       - name: Annotated
+      - name: AnnotationAllowed
+      - name: Typed
       - name: Scope
       - name: Type
       - name: ObjectType
