--- a/ets2panda/test/unit/lsp/CMakeLists.txt
+++ b/ets2panda/test/unit/lsp/CMakeLists.txt
@@ -12,6 +12,7 @@
 # limitations under the License.
 
 ets2panda_add_gtest(lsp_api_test_1 CPP_SOURCES
+    get_definition_at_position_test.cpp
     get_file_references_test.cpp
     get_references_at_position_test.cpp
     document_highlights.cpp
