Title: Implement getAdjustedLocation
Description: Adding the internal function getAdjustedLocation of findRenameLocations

Issue: #IBLD14

Testing: Unit testing for all functions.

Signed-off-by: Berk Tiryakiler <berk.tiryakiler@huawei.com>

--- a/ets2panda/lsp/CMakeLists.txt
+++ b/ets2panda/lsp/CMakeLists.txt
@@ -18,6 +18,7 @@ set(ES2PANDA_LSP_SRC
   ./src/cancellation_token.cpp
   ./src/quick_info.cpp
   ./src/references.cpp
+  ./src/get_adjusted_location.cpp
 )
 
 panda_add_library(${LSP_LIB} SHARED ${ES2PANDA_LSP_SRC})
