Support export default with specifier
Issue:      https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBML2Y?from=project-issue
Signed-off-by: daizihan <daizihan@huawei.com>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -27,3 +27,7 @@ syntax:
 - name: AMBIENT_CLASS_MISSING_BODY
   id: 4
   message: Ambient class declarations must have a body.
+
+- name: EXPORT_DEFAULT_WITH_MUPLTIPLE_SPECIFIER
+  id: 5
+  message: export default is not allowed to export multiple specifiers.
