export Program methods
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBMLPK

Tests:
ninja es2panda-plugin-test

Signed-off-by: ozerovnikita <ozerov.nikita@huawei-partners.com>

--- a/ets2panda/public/CMakeLists.txt
+++ b/ets2panda/public/CMakeLists.txt
@@ -283,6 +283,8 @@ set (HEADERS_TO_BE_PARSED
     ${ES2PANDA_ROOT}/checker/resolveResult.h
     ${ES2PANDA_ROOT}/parser/ETSparser.h
     ${ES2PANDA_ROOT}/parser/parserFlags.h
+    ${ES2PANDA_ROOT}/parser/parserImpl.h
+    ${ES2PANDA_ROOT}/parser/program/program.h
     ${ES2PANDA_ROOT}/es2panda.h
     ${ES2PANDA_ROOT}/ast_verifier/ASTVerifier.h
     ${ES2PANDA_ROOT}/ast_verifier/checkContext.h
@@ -549,6 +551,7 @@ set (ES2PANDA_API_GENERATED
     ${LIBGEN_DIR}/gen/headers/checker/resolveResult.yaml
     ${LIBGEN_DIR}/gen/headers/parser/parserFlags.yaml
     ${LIBGEN_DIR}/gen/headers/parser/ETSparser.yaml
+    ${LIBGEN_DIR}/gen/headers/parser/program/program.yaml
     ${LIBGEN_DIR}/gen/headers/ast_verifier/ASTVerifier.yaml
     ${LIBGEN_DIR}/gen/headers/ast_verifier/checkContext.yaml
     )
